--- a/Code/figure_plot.ipynb
+++ b/Code/figure_plot.ipynb
@@ -2329,7 +2329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.undefined"
   }
  },
  "nbformat": 4,
